--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.1.0",
+    "eslint": "^8.43.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
   }
